--- a/docker/Dockerfile.bm
+++ b/docker/Dockerfile.bm
@@ -66,7 +66,7 @@ RUN curl -fsSL -v -o ~/miniconda.sh -O  https://repo.anaconda.com/miniconda/Mini
 FROM dev-base AS image
 COPY --from=conda /opt/conda /opt/conda
 RUN pip install torch torchvision torchaudio torchdata torchtext --index-url https://download.pytorch.org/whl/cpu
-ARG TORCH_BENCH_COMMIT="main"
+ARG TORCH_BENCH_COMMIT=main
 ARG HF_HUB_TOKEN=hf_xxx
 ENV HUGGING_FACE_HUB_TOKEN ${HF_HUB_TOKEN}
 WORKDIR /workspace
