--- a/docker/Dockerfile.dnn
+++ b/docker/Dockerfile.dnn
@@ -66,7 +66,7 @@ RUN curl -fsSL -v -k -o ~/miniconda.sh -O  https://repo.anaconda.com/miniconda/M
 
 FROM dev-base AS build
 ARG PT_REPO=https://github.com/pytorch/pytorch
-ARG PT_COMMIT="main"
+ARG PT_COMMIT=main
 ARG DNNL_COMMIT=rls-v3.3
 COPY --from=conda /opt/conda /opt/conda
 WORKDIR /workspace
