--- a/docker/Dockerfile.gpu
+++ b/docker/Dockerfile.gpu
@@ -70,7 +70,7 @@ RUN curl -fsSL -v -o ~/miniconda.sh -O  https://repo.anaconda.com/miniconda/Mini
 
 FROM dev-base AS build
 ARG PT_REPO=https://github.com/pytorch/pytorch
-ARG PT_COMMIT="main"
+ARG PT_COMMIT=main
 COPY --from=conda /opt/conda /opt/conda
 WORKDIR /workspace
 RUN git clone ${PT_REPO} && \
