--- a/docker/Dockerfile.gpu.2_1
+++ b/docker/Dockerfile.gpu.2_1
@@ -69,7 +69,7 @@ RUN curl -fsSL -v -o ~/miniconda.sh -O  https://repo.anaconda.com/miniconda/Mini
 
 FROM dev-base AS build
 ARG PT_REPO=https://github.com/pytorch/pytorch
-ARG PT_COMMIT="v2.1.0"
+ARG PT_COMMIT=v2.1.0
 COPY --from=conda /opt/conda /opt/conda
 WORKDIR /workspace
 RUN pip install pandas psutil scipy
