--- a/docker/Dockerfile.dynamo
+++ b/docker/Dockerfile.dynamo
@@ -112,7 +112,7 @@ RUN git clone https://github.com/pytorch/benchmark.git && \
     python install.py && \
     # Need update numpy version to avoid some models crash
     pip install --upgrade numpy
-RUN python -c "import torch, torchdynamo, torchvision, torchtext"
+RUN python -c "import torch, torchdynamo, torchvision, torchaudio"
 
 # Clean for final image
 FROM dev-base AS image
