--- a/docker/Dockerfile.hf_oob
+++ b/docker/Dockerfile.hf_oob
@@ -60,64 +60,43 @@ RUN curl -fsSL -v -k -o ~/miniconda.sh -O https://repo.anaconda.com/miniconda/Mi
         jemalloc \
         openssl \      
         weasyprint && \
+    /opt/conda/bin/conda init && \
     /opt/conda/bin/conda clean -ya && \
     # Fix GLIBCXX version issue
     rm -f /opt/conda/lib/libstdc++.so.6
 
 FROM dev-base AS build
-ARG PT_REPO=https://github.com/pytorch/pytorch
-ARG PT_BRANCH=main
-ARG PT_COMMIT=${PT_BRANCH}
 COPY --from=conda /opt/conda /opt/conda
+COPY --from=conda /root/.bashrc /root/.bashrc
 WORKDIR /workspace
-RUN git clone -b ${PT_BRANCH} ${PT_REPO} && \
-    cd pytorch && git checkout ${PT_COMMIT} && git submodule sync && git submodule update --init --recursive && \
-    python setup.py develop && cd ..
+ARG TORCH_REPO=$TORCH_REPO
+ARG TORCH_BRANCH=$TORCH_BRANCH
+ARG TORCH_COMMIT=$TORCH_COMMIT
+RUN git clone -b ${TORCH_BRANCH} ${TORCH_REPO} && \
+    cd pytorch && git checkout ${TORCH_COMMIT} && git submodule sync && git submodule update --init --recursive && \
+    python setup.py develop && cd .. && \
+    python -c "import torch"
+
 ARG TORCH_VISION_BRANCH=main
-ARG TORCH_VISION_COMMIT=default
-ARG TORCH_DATA_BRANCH=main
-ARG TORCH_DATA_COMMIT=default
-ARG TORCH_TEXT_BRANCH=main
-ARG TORCH_TEXT_COMMIT=default
-ARG TORCH_AUDIO_BRANCH=main
-ARG TORCH_AUDIO_COMMIT=default
+ARG TORCH_VISION_COMMIT=${VISION}
 RUN git clone -b ${TORCH_VISION_BRANCH} https://github.com/pytorch/vision.git && \
     cd vision && if [ "${TORCH_VISION_COMMIT}" = "default" ]; then git checkout `cat /workspace/pytorch/.github/ci_commit_pins/vision.txt`; else git checkout ${TORCH_VISION_COMMIT}; fi && \
     python setup.py bdist_wheel && \
-    pip install dist/*.whl && cd .. && \
-    git clone -b ${TORCH_DATA_BRANCH} https://github.com/pytorch/data.git && \
-    cd data && if [ "${TORCH_DATA_COMMIT}" = "default" ]; then git checkout `cat /workspace/pytorch/.github/ci_commit_pins/data.txt`; else git checkout ${TORCH_DATA_COMMIT}; fi && \
-    python setup.py bdist_wheel && \
-    pip install dist/*.whl && cd .. && \
-    git clone -b ${TORCH_TEXT_BRANCH} https://github.com/pytorch/text.git && \
-    cd text && if [ "${TORCH_TEXT_COMMIT}" = "default" ]; then git checkout `cat /workspace/pytorch/.github/ci_commit_pins/text.txt`; else git checkout ${TORCH_TEXT_COMMIT}; fi && git submodule sync && git submodule update --init --recursive && \
-    python setup.py bdist_wheel && \
-    pip install dist/*.whl && cd .. && \
-    git clone -b ${TORCH_AUDIO_BRANCH} https://github.com/pytorch/audio.git && \
-    cd audio && if [ "${TORCH_AUDIO_COMMIT}" = "default" ]; then git checkout `cat /workspace/pytorch/.github/ci_commit_pins/audio.txt`; else git checkout ${TORCH_AUDIO_COMMIT}; fi && git submodule sync && git submodule update --init --recursive && \
-    # Workaround for https://github.com/pytorch/audio/issues/2784
-    sed -i "3 i link_directories(/opt/conda/lib)" CMakeLists.txt && \
-    python setup.py bdist_wheel && \
     pip install dist/*.whl && cd ..
-ARG TORCH_BENCH_BRANCH=main
-ARG TORCH_BENCH_COMMIT=default
-ARG HF_HUB_TOKEN=hf_xxx
-ENV HUGGING_FACE_HUB_TOKEN ${HF_HUB_TOKEN}
-RUN git clone -b ${TORCH_BENCH_BRANCH} https://github.com/pytorch/benchmark.git && \
-    cd benchmark && if [ "${TORCH_BENCH_COMMIT}" = "default" ]; then git checkout `cat /workspace/pytorch/.github/ci_commit_pins/torchbench.txt`; else git checkout ${TORCH_BENCH_COMMIT}; fi && pip install --no-deps -r requirements.txt && \
-    pip install --no-cache Jinja2==3.1.2 markupsafe==2.0.1 beartype==0.15.0 mpmath==1.3.0 && \
-    python install.py --continue_on_fail && \
-    # Need update numpy version to avoid some models crash
-    pip install --upgrade numpy
-ARG BENCH_COMMIT=${PT_COMMIT}
-WORKDIR /workspace/pytorch
-RUN git checkout ${BENCH_COMMIT} benchmarks && \
-    python -c "import torch, torchvision, torchaudio"
+
+ARG HF_TEST_REPO=$HF_TEST_REPO
+ARG HF_TEST_BRANCH=$HF_TEST_BRANCH
+ARG HF_TEST_COMMIT=$HF_TEST_COMMIT
+RUN git clone -b ${HF_TEST_BRANCH} ${HF_TEST_REPO} && \
+    cd hf_testcase && git checkout ${HF_TEST_COMMIT} && cd .. && \
+    pip install --upgrade transformers && \
+    pip install fire mpmath==1.3.0 diffusers
 
 # Clean for final image
 FROM dev-base AS image
-ARG BENCH_COMMIT=${PT_COMMIT}
 COPY --from=build /opt/conda /opt/conda
+COPY --from=build /root/.bashrc /root/.bashrc
 COPY --from=build /workspace/pytorch /workspace/pytorch
-COPY --from=build /workspace/benchmark /workspace/benchmark
-WORKDIR /workspace/pytorch
+COPY --from=build /workspace/hf_testcase /workspace/hf_testcase
+COPY --from=build /usr/lib/x86_64-linux-gnu/libstdc++.so.6 /opt/conda/lib
+WORKDIR /workspace/hf_testcase
