--- a/docker/Dockerfile.ipex
+++ b/docker/Dockerfile.ipex
@@ -109,11 +109,11 @@ RUN git clone -b ${TORCH_BENCH_BRANCH} https://github.com/pytorch/benchmark.git 
     python install.py --continue_on_fail && cd .. && \
     # Need update numpy version to avoid some models crash
     pip install --upgrade numpy
-ARG IPEX_BRANCH${IPEX_BRANCH}
-ARG IPEX_COMMIT=${IPEX_BRANCH}
-RUN git clone -b ${IPEX_BRANCH} https://github.com/intel/intel-extension-for-pytorch.git ipex && \
-    cd ipex && git checkout ${IPEX_COMMIT} && git submodule sync && git submodule update --init --recursive && \
-    python setup.py install
+# ARG IPEX_BRANCH${IPEX_BRANCH}
+# ARG IPEX_COMMIT=${IPEX_BRANCH}
+# RUN git clone -b ${IPEX_BRANCH} https://github.com/intel/intel-extension-for-pytorch.git ipex && \
+#     cd ipex && git checkout ${IPEX_COMMIT} && git submodule sync && git submodule update --init --recursive && \
+#     python setup.py install
 ARG BENCH_COMMIT=${PT_COMMIT}
 WORKDIR /workspace/pytorch
 RUN git checkout ${BENCH_COMMIT} benchmarks && \ 
@@ -124,6 +124,6 @@ FROM dev-base AS image
 ARG BENCH_COMMIT=${PT_COMMIT}
 COPY --from=build /opt/conda /opt/conda
 COPY --from=build /workspace/pytorch /workspace/pytorch
-COPY --from=build /workspace/ipex /workspace/ipex
+# COPY --from=build /workspace/ipex /workspace/ipex
 COPY --from=build /workspace/benchmark /workspace/benchmark
 WORKDIR /workspace/pytorch
