add Transformers version in pined torch repo

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -81,6 +81,7 @@ ARG TORCH_TEXT_BRANCH=main
 ARG TORCH_TEXT_COMMIT=default
 ARG TORCH_AUDIO_BRANCH=main
 ARG TORCH_AUDIO_COMMIT=default
+ARG TRANSFORMERS_VERSION=main
 RUN git clone -b ${TORCH_VISION_BRANCH} https://github.com/pytorch/vision.git && \
     cd vision && if [ "${TORCH_VISION_COMMIT}" = "default" ]; then git checkout `cat /workspace/pytorch/.github/ci_commit_pins/vision.txt`; else git checkout ${TORCH_VISION_COMMIT}; fi && \
     python setup.py bdist_wheel && \
@@ -97,6 +98,10 @@ RUN git clone -b ${TORCH_VISION_BRANCH} https://github.com/pytorch/vision.git &&
     cd audio && if [ "${TORCH_AUDIO_COMMIT}" = "default" ]; then git checkout `cat /workspace/pytorch/.github/ci_commit_pins/audio.txt`; else git checkout ${TORCH_AUDIO_COMMIT}; fi && git submodule sync && git submodule update --init --recursive && \
     # Workaround for https://github.com/pytorch/audio/issues/2784
     sed -i "3 i link_directories(/opt/conda/lib)" CMakeLists.txt && \
+    python setup.py bdist_wheel && \
+    pip install dist/*.whl && cd .. && \
+    git clone -b ${TRANSFORMERS_VERSION} https://github.com/huggingface/transformers.git && \
+    cd transformers && git checkout `cat /workspace/pytorch/.ci/docker/ci_commit_pins/huggingface.txt` && git submodule sync && git submodule update --init --recursive && \
     python setup.py bdist_wheel && \
     pip install dist/*.whl && cd ..
 ARG TORCH_BENCH_BRANCH=main
