--- a/docker/Dockerfile.hf_pipeline
+++ b/docker/Dockerfile.hf_pipeline
@@ -82,7 +82,8 @@ RUN git clone https://github.com/pytorch/vision.git && \
 
 ARG TRANSFORMERS_VERSION=${TRANSFORMERS_VERSION}
 RUN echo ${TRANSFORMERS_VERSION} && if [ "${TRANSFORMERS_VERSION}" = "default" ]; then \
-        pip install --force-reinstall git+https://github.com/huggingface/transformers@${TRANSFORMERS_VERSION}; \
+        export TRANSFORMERS_COMMIT=`cat /workspace/pytorch/.ci/docker/ci_commit_pins/huggingface.txt`; \
+        pip install --force-reinstall git+https://github.com/huggingface/transformers@${TRANSFORMERS_COMMIT}; \
     else \
         pip install --force-reinstall transformers==${TRANSFORMERS_VERSION}; \
     fi
