--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -105,7 +105,7 @@ ARG TORCH_BENCH_COMMIT=default
 ARG HF_HUB_TOKEN=hf_xxx
 ENV HUGGING_FACE_HUB_TOKEN ${HF_HUB_TOKEN}
 RUN git clone -b ${TORCH_BENCH_BRANCH} https://github.com/DiweiSun/benchmark.git && \
-    cd benchmark && pip install --no-deps -r requirements.txt && \
+    cd benchmark && git checkout molly/patch_windwos && git pull && pip install --no-deps -r requirements.txt && \
     pip install --no-cache Jinja2==3.1.2 markupsafe==2.0.1 beartype==0.15.0 mpmath==1.3.0 && \
     python install.py --continue_on_fail && \
     # Need update numpy version to avoid some models crash
