re-install torch after benchmarks

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -113,6 +113,8 @@ ARG BENCH_COMMIT=${PT_COMMIT}
 WORKDIR /workspace/pytorch
 RUN git checkout ${BENCH_COMMIT} benchmarks && \
     python -c "import torch, torchvision, torchaudio"
+RUN cd /workspace/pytorch && \
+    python setup.py develop
 
 # Clean for final image
 FROM dev-base AS image
