use existed condarc

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -27,13 +27,12 @@ ENV PATH /opt/conda/bin:$PATH
 
 FROM dev-base AS conda
 ARG PYTHON_VERSION=3.8
+COPY condarc /root/.condarc
 RUN curl -fsSL -v -k -o ~/miniforge.sh -O https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-Linux-x86_64.sh && \
     chmod +x ~/miniforge.sh && \
     # Fix conda install issue
     ~/miniforge.sh -b -p /opt/conda && \
     rm ~/miniforge.sh && \
-    /opt/conda/bin/conda config --set channel_priority strict && \
-    /opt/conda/bin/conda config --append channels intel && \
     /opt/conda/bin/conda install -y python=${PYTHON_VERSION} \
         astunparse \
         cffi \
