--- a/docker/Dockerfile.dind
+++ b/docker/Dockerfile.dind
@@ -1,4 +1,3 @@
-# Docker in Docker (dind)
 # syntax=docker/dockerfile:1
 FROM cruizba/ubuntu-dind:latest
 ENV DEBIAN_FRONTEND=noninteractive
@@ -62,9 +61,15 @@ RUN curl -fsSL -v -k -o ~/miniforge.sh -O https://github.com/conda-forge/minifor
         openssl \      
         weasyprint && \
     pip install datacompy scipy styleframe bs4 PyGithub && \
-    /opt/conda/bin/conda clean -ya && \
-    ln -fs /bin/bash /bin/sh && \
+    /opt/conda/bin/conda clean -ya && \    
     # Fix GLIBCXX version issue
     rm -f /opt/conda/lib/libstdc++.so.6
+
+RUN ln -fs /bin/bash /bin/sh && \
+wget http://owrdropbox.intel.com/dropbox/public/Ansible/certificates/IntelCA5A-base64.crt && \
+    wget http://owrdropbox.intel.com/dropbox/public/Ansible/certificates/IntelCA5B-base64.crt && \
+    wget http://owrdropbox.intel.com/dropbox/public/Ansible/certificates/IntelSHA256RootCA-base64.crt && \
+    mv Intel* /usr/local/share/ca-certificates/ && \
+    update-ca-certificates
 
 WORKDIR /root/workspace
