use pip to install intel-openmp

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -40,7 +40,6 @@ RUN curl -fsSL -v -k -o ~/miniforge.sh -O https://github.com/conda-forge/minifor
         dataclasses \
         future \
         git-lfs \
-        intel-openmp \
         ipython \
         mkl \
         mkl-include \
@@ -66,6 +65,7 @@ ARG PT_REPO=https://github.com/pytorch/pytorch
 ARG PT_COMMIT=main
 COPY --from=conda /opt/conda /opt/conda
 WORKDIR /workspace
+RUN pip install intel-openmp
 RUN git clone ${PT_REPO} && \
     cd pytorch && git checkout ${PT_COMMIT} && git submodule sync && git submodule update --init --recursive && \
     python setup.py develop && cd ..
