modify numpy version installation

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -107,8 +107,7 @@ RUN git clone https://github.com/pytorch/benchmark.git && \
         pip install --force-reinstall transformers==${TRANSFORMERS_VERSION}; \
     fi && \
     # Need update numpy version to avoid some models crash
-    # numpy 2.0 ValueError: numpy.dtype size changed, may indicate binary incompatibility. Expected 96 from C header, got 88 from PyObject
-    pip install numpy==1.26.4
+    pip install --upgrade numpy
 ARG BENCH_COMMIT=${PT_COMMIT}
 WORKDIR /workspace/pytorch
 RUN git checkout ${BENCH_COMMIT} benchmarks && \
