--- a/docker/Dockerfile.gpu.2_1
+++ b/docker/Dockerfile.gpu.2_1
@@ -29,7 +29,7 @@ ENV NVIDIA_DRIVER_CAPABILITIES compute,utility
 ENV LD_LIBRARY_PATH /usr/local/nvidia/lib:/usr/local/nvidia/lib64
 
 FROM dev-base AS conda
-ARG PYTHON_VERSION=3.10
+ARG PYTHON_VERSION=3.11
 RUN curl -fsSL -v -k -o ~/miniforge.sh -O https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-Linux-x86_64.sh && \
     chmod +x ~/miniforge.sh && \
     # Fix conda install issue
@@ -112,7 +112,8 @@ RUN git clone -b ${TORCH_BENCH_BRANCH} https://github.com/pytorch/benchmark.git 
     pip install --no-cache Jinja2==3.1.2 markupsafe==2.0.1 beartype==0.15.0 mpmath==1.3.0 && \
     python install.py --continue_on_fail && \
     # Need update numpy version to avoid some models crash
-    pip install --upgrade numpy
+    # numpy 2.0 ValueError: numpy.dtype size changed, may indicate binary incompatibility. Expected 96 from C header, got 88 from PyObject
+    pip install numpy==1.26.4
 RUN pip install triton==2.1 transformers==4.34
 WORKDIR /workspace/pytorch
 RUN python -c "import torch, torchvision, torchtext"
