--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update && \
         build-essential \
         ca-certificates \
         ccache \
+        cmake \
         curl \
         ffmpeg \
         git \
@@ -35,13 +36,13 @@ RUN curl -fsSL -v -k -o ~/miniforge.sh -O https://github.com/conda-forge/minifor
         astunparse \
         cffi \
         cython \
+        cmake>=3.13.0 \
         dataclasses \
         future \
         git-lfs \
         ipython \
         mkl \
         mkl-include \
-        cmake \
         ninja \
         numpy \
         requests \
