--- a/docker/Dockerfile.cpu
+++ b/docker/Dockerfile.cpu
@@ -67,7 +67,7 @@ WORKDIR /workspace
 RUN pip3 install --pre torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/cpu && \
     git clone https://github.com/pytorch/ao.git && \
     cd ao && pip install -e . && cd .. && \
-    git clone https://github.com/pytorch/torchtune.git && \
+    git clone -b benchmark https://github.com/zxd1997066/torchtune.git && \
     cd torchtune && pip install -e . && cd .. && \
     git clone -b benchmark https://github.com/zxd1997066/torchchat.git && \
     conda install -y gperftools -c conda-forge && \
