--- a/docker/Dockerfile.xpu
+++ b/docker/Dockerfile.xpu
@@ -1,6 +1,5 @@
 # syntax=docker/dockerfile:1
 FROM gar-registry.caas.intel.com/pytorch/ipex_gpu/ubuntu2204:miniforge_py310 as dev-base
-SHELL ["/bin/bash", "-c"]
 ENV PATH=~/miniforge-pypy3/bin/:${PATH}
 WORKDIR /workspace
 ARG CONDA_NAME=chat_test
@@ -37,7 +36,7 @@ RUN set -ex && \
     . /root/miniforge-pypy3/bin/activate && \
     rm -rf  /root/miniforge-pypy3/envs/* && \
     conda create -n $CONDA_NAME  python=3.10 -y && \
-    conda activate ${conda_env} && \
+    conda activate ${CONDA_NAME} && \
     if [ $? -ne 0 ]; then echo 'Conda env fail'; exit; fi && \
     pip install --pre torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/xpu && \
     git clone https://github.com/pytorch/ao.git && \
@@ -51,5 +50,10 @@ RUN set -ex && \
     echo 1 | update-alternatives --config gcc &&\
     rm -rf /workspace/ubit-artifactory-ba.intel.com && \
 
+FROM gar-registry.caas.intel.com/pytorch/ipex_gpu/ubuntu2204:miniforge_py310 as dev-base
+COPY --from=build /root/miniforge-pypy3 /root/miniforge-pypy3
+COPY --from=build /workspace/ao /workspace/ao
+COPY --from=build /workspace/torchtune /workspace/torchtune
+COPY --from=build /workspace/torchchat /workspace/torchchat
 WORKDIR /workspace/torchchat
 
